--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <p><strong>Name: </strong>Justin Jackson</p>
     <p><strong>I want to be a... </strong>Webmaster</p>
     <hr>
-    <h2 align="center">Contact</h2>
-    <p><a href="mailto:words@bizbox.ca">Email me here</a>: words@bizbox.ca</p>
-    </article>
+    <p>Email: words@bizbox.ca</p>
+    <p>Twitter: <a href="https://twitter.com/mijustin">@mijustin</a></p>
+    <p>Blog: <a href="https://justinjackson.ca">justinjackson.ca</a></p>
+  </article>
 </div>
 </body>
 </html>
