--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
      <h1 align="center">Class of 1993</h1>
     <img src="img/nerd-mullet-hair-best-funny-award.jpg" style="width:80%;" alt="Justin Jackson best nerd mullet webmaster" border="0" class="img-responsive">
     <p><strong>Name: </strong>Justin Jackson</p>
-    <p><strong>I want to be a... </strong>Webmaster</p>
+    <p><strong>Favorite thing: </strong>Playing Duke Nukem on my 486DX</p>
+    <p>&nbsp;</p>
+    <p><strong>Future occupation: </strong>Webmaster</p>
     <hr>
     <p>Email: words@bizbox.ca</p>
     <p>Twitter: <a href="https://twitter.com/mijustin">@mijustin</a></p>
