--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Nerd Mullet</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-<link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -15,6 +13,7 @@
     <img src="img/nerd-mullet-hair-best-funny-award.jpg" style="width:80%;" alt="Justin Jackson best nerd mullet webmaster" border="0" class="img-responsive">
     <p><strong>Name: </strong>Justin Jackson</p>
     <p><strong>Favorite thing: </strong>Duke Nukem on my 486DX    </p>
+    <p><strong>Current occupation: </strong>BBS SysOp</p>
     <p><strong>Future occupation: </strong>Webmaster</p>
     <hr>
     <p>Email: words@bizbox.ca</p>
