--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <hr>
     <p>Email: words@bizbox.ca</p>
     <p>Twitter: <a href="https://twitter.com/mijustin">@mijustin</a></p>
-    <p>Blog: <a href="https://justinjackson.ca">justinjackson.ca</a></p> 
+    <p>Blog: <a href="https://justinjackson.ca">justinjackson.ca</a></p>
+    <p>Podcast: <a href="http://megamaker.co">megamaker.co</a></p> 
   </article>
 </div>
 </body>
