--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Email me at justin@nerdnorth.com
     <p><strong>Current occupation: </strong>BBS SysOp</p>
     <p><strong>Future occupation: </strong>Webmaster</p>
     <hr>
-    <p>Email: words@bizbox.ca</p>
+    <p>Email: words@nerdnorth.com</p>
     <p>Twitter: <a href="https://twitter.com/mijustin">@mijustin</a></p>
     <p>Blog: <a href="https://justinjackson.ca">justinjackson.ca</a></p>
     <p>Podcast: <a href="http://megamaker.co">megamaker.co</a></p> 
