--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <!--
 Do you love tacos?
-Email me at justin@nerdnorth.com
+Email me at justin@megamaker.co
 -->
 <html>
 <head>
@@ -16,14 +16,16 @@ Email me at justin@nerdnorth.com
      <h1 align="center">Class of 1993</h1>
     <img src="img/nerd-mullet-hair-best-funny-award.jpg" style="width:80%;" alt="Justin Jackson best nerd mullet webmaster" border="0" class="img-responsive">
     <p><strong>Name: </strong>Justin Jackson</p>
-    <p><strong>Favorite thing: </strong>Duke Nukem on my 486DX    </p>
+    <p><strong>Computer: </strong>486DX</p>
+    <p><strong>Fave games: </strong>Duke Nukem II, Wolfenstein 3D, Doom, Commander Keen, Raptor, Epic Pinball</p>
     <p><strong>Current occupation: </strong>BBS SysOp</p>
     <p><strong>Future occupation: </strong>Webmaster</p>
     <hr>
     <p>Email: words@nerdnorth.com</p>
     <p>Twitter: <a href="https://twitter.com/mijustin">@mijustin</a></p>
     <p>Blog: <a href="https://justinjackson.ca">justinjackson.ca</a></p>
-    <p>Podcast: <a href="http://megamaker.co">megamaker.co</a></p> 
+    <p>Podcast: <a href="http://podcast.megamaker.co">megamaker.co</a></p>
+    <p>Startup: <a href="https://transistor.fm">transistor.fm</a></p>
   </article>
 </div>
 </body>
