--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@ Email me at justin@megamaker.co
     <p><strong>Computer: </strong>486DX</p>
     <p><strong>Fave games: </strong>Duke Nukem II, Wolfenstein 3D, Doom, Commander Keen, Raptor, Epic Pinball</p>
     <p><strong>Current occupation: </strong>BBS SysOp</p>
-    <p><strong>Future occupation: </strong>Webmaster</p>
+    <p><strong>Future occupation: </strong><a href="https://justinjackson.ca/webmaster/">Webmaster</a></p>
     <hr>
-    <p>Email: words@nerdnorth.com</p>
+    <p>Email: words@megamaker.co</p>
     <p>Twitter: <a href="https://twitter.com/mijustin">@mijustin</a></p>
     <p>Blog: <a href="https://justinjackson.ca">justinjackson.ca</a></p>
-    <p>Podcast: <a href="http://podcast.megamaker.co">megamaker.co</a></p>
+    <p>Podcast: <a href="http://podcast.megamaker.co">podcast.megamaker.co</a></p>
     <p>Startup: <a href="https://transistor.fm">transistor.fm</a></p>
   </article>
 </div>
