--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <!--
 Do you love tacos?
-Email me at justin@megamaker.co
+Email me at words@megamaker.co
 -->
 <html>
 <head>
