--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@ Email me at words@megamaker.co
     <p><strong>Current occupation: </strong>BBS SysOp</p>
     <p><strong>Future occupation: </strong><a href="https://justinjackson.ca/webmaster/">Webmaster</a></p>
     <hr>
-    <p>Email: words@megamaker.co</p>
-    <p>Twitter: <a href="https://twitter.com/mijustin">@mijustin</a></p>
-    <p>Blog: <a href="https://justinjackson.ca">justinjackson.ca</a></p>
-    <p>Podcast: <a href="http://podcast.megamaker.co">podcast.megamaker.co</a></p>
-    <p>Startup: <a href="https://transistor.fm">transistor.fm</a></p>
+    <div style="font-size:12px;">
+    <p>Email: words@megamaker.co<br>
+      Twitter: <a href="https://twitter.com/mijustin">@mijustin<br>
+      </a>Blog: <a href="https://justinjackson.ca">justinjackson.ca<br>
+      </a>Podcast: <a href="http://podcast.megamaker.co">podcast.megamaker.co<br>
+      </a>Book: <a href="https://devmarketing.xyz">devmarketing.xyz<br>
+      </a>Startup: <a href="https://transistor.fm">transistor.fm</a></p>
+</div>
   </article>
 </div>
 </body>
